plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.13'
    id 'org.beryx.jlink' version '2.25.0'
}

group 'com.dtc'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
    jcenter()
    mavenLocal()
}

mainClassName = 'de.jensd.fx.glyphs.examples.CssStyledGlyphsApp'

sourceCompatibility ='1.8'
[compileJava,compileTestJava]*.options*.encoding = 'UTF-8'

if (!hasProperty('mainClass')){
    ext.mainClass = 'de.jensd.fx.glyphs.examples.CssStyledGlyphsApp'
}

task execute(type:JavaExec){
    main = mainClass

}

ext {
    junitVersion = '5.8.2'
}

sourceCompatibility = '17'
targetCompatibility = '17'

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

def args = [
        "--add-exports=javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED",
        "--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior" +
                "=ALL-UNNAMED", "--add-exports=javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED",
        "--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior" + "=com.jfoenix",
        "--add-exports=javafx.controls/com.sun.javafx.binding=com.jfoenix",
        "--illegal-access=warn",
        "--add-opens=javafx.controls/javafx.scene.control.skin=com.jfoenix",
        "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
        "--add-opens=java.base/java.lang.reflect=com.jfoenix",
        "--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior" + "=com.jfoenix",
        "--add-exports=javafx.controls/com.sun.javafx.scene.control=com.jfoenix",
        "--add-exports=javafx.base/com.sun.javafx.binding=com.jfoenix",
        "--add-exports=javafx.graphics/com.sun.javafx.stage=com.jfoenix",
        "--add-exports=javafx.base/com.sun.javafx.event=com.jfoenix"
]

application {
    mainModule = 'com.dtc.optik_2v'
    mainClass = 'com.dtc.optik_2v.HelloApplication'
    applicationDefaultJvmArgs = args
}

javafx {
    version = '17.0.2'
    modules = ['javafx.controls', 'javafx.fxml']
}

dependencies {

    testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
    implementation files("C:/JavaFX Project/Librerias/jfoenix-9.0.10.jar")
    implementation files("C:/JavaFX Project/Librerias/gson/gson/gson-2.8.0.jar")
    implementation fileTree(includes: ['*.jar'],dir:"C:/JavaFX Project/Librerias/unirest")
}

test {
    useJUnitPlatform()
}

jlink {
    imageZip = project.file("${buildDir}/distributions/app-${javafx.platform.classifier}.zip")
    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
    launcher {
        name = 'app'
    }
}

jlinkZip {
    group = 'distribution'
}